fix gap between columns

--- a/wp-content/themes/themo/css/industries.css
+++ b/wp-content/themes/themo/css/industries.css
@@ -43,7 +43,7 @@
 }
 
 .industries-accordion .accordion .panel-body .accordion-inner ul {
-    margin-top: 24px;
+    /*margin-top: 24px;*/
     padding-left: 8px;
 }
 
